force-app/main/default/objects/WFT_Custom_Settings__c/WFT_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>WFT Custom Settings</label>
</CustomObject>