force-app/main/default/objects/WFT_Custom_Settings__c/fields/Daily_User_Zoom_Meeting_API_Calls__c.field-meta.xml
<CustomField>
    <fullName>Daily_User_Zoom_Meeting_API_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By: CC
Purpose: Keep count of Zoom Meetings created in a day.
https://marketplace.zoom.us/docs/api-reference/rate-limits</description>
    <inlineHelpText>Count of Zoom Meetings CRED in a day. API Limit is 100 a day per hosting User.</inlineHelpText>
    <label>Daily User Zoom Meeting API Calls</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>