force-app/main/default/objects/WFT_Custom_Settings__c/fields/Enable_Class_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enable_Class_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: CC
Purpose: Enable Class trigger.</description>
    <inlineHelpText>Enable/Disable Class Trigger.</inlineHelpText>
    <label>Enable Class Trigger</label>
    <type>Checkbox</type>
</CustomField>