force-app/main/default/objects/WFT_Custom_Settings__c/fields/Most_Recent_Zoom_Meeting_API_Call__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Zoom_Meeting_API_Call__c</fullName>
    <description>Created By: CC
Purpose: Keeps date of most recent Meeting API call in a day. Date is based off UTC.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Keeps date of most recent Meeting API call in a day is based on UTC.</inlineHelpText>
    <label>Most Recent Zoom Meeting API Call</label>
    <type>Date</type>
</CustomField>