force-app/main/default/objects/WFT_Custom_Settings__c/fields/Zoom_API_JWT__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_JWT__c</fullName>
    <description>Created By: CC
Purpose: JWT Authentication Token.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>JWT Authentication Token</inlineHelpText>
    <label>Zoom API JWT</label>
    <type>TextArea</type>
</CustomField>