force-app/main/default/objects/WFT_Custom_Settings__c/fields/Zoom_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_Key__c</fullName>
    <description>Created By: CC
Purpose: Store public key to Zoom API.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Public key to Zoom API.</inlineHelpText>
    <label>Zoom API Key</label>
    <type>TextArea</type>
</CustomField>