force-app/main/default/objects/WFT_Custom_Settings__c/fields/Zoom_API_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_Secret_Key__c</fullName>
    <description>Created By: CC
Purpose: Store Secret key for Zoom API.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Zoom API Secret Key</label>
    <type>TextArea</type>
</CustomField>