force-app/main/default/objects/WFT_Custom_Settings__c/fields/Zoom_API_User__c.field-meta.xml
<CustomField>
    <fullName>Zoom_API_User__c</fullName>
    <description>Created By: CC
Purpose: Email or UserId of the Zoom API user who will be scheduling meetings.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email or UserId of the Zoom API user who will be scheduling meetings.</inlineHelpText>
    <label>Zoom API User</label>
    <type>TextArea</type>
</CustomField>