force-app/main/default/objects/WFT_Custom_Settings__c/fields/Zoom_Meeting_Alternate_Hosts__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_Alternate_Hosts__c</fullName>
    <description>Created By: CC
Purpose: Comma Separated list of emails of default Alternate Hosts for WFT Class Meetings.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma Separated list of emails of default Alternate Hosts for WFT Class Meetings.</inlineHelpText>
    <label>Zoom Meeting Alternate Hosts</label>
    <type>TextArea</type>
</CustomField>