force-app/main/default/objects/WFT_Custom_Settings__c/fields/Zoom_Meeting_Host__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_Host__c</fullName>
    <description>Created By: CC
Purpose: Store Email or Zoom Id of user who be the default host for WFT Zoom Meetings.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Store Email or Zoom Id of user who be the default host for WFT Zoom Meetings. Only one user can be host.</inlineHelpText>
    <label>Zoom Meeting Host</label>
    <type>TextArea</type>
</CustomField>